--- a/Wizards/settingswizard.ui
+++ b/Wizards/settingswizard.ui
@@ -172,9 +172,9 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>0</y>
-      <width>331</width>
+      <x>30</x>
+      <y>-40</y>
+      <width>361</width>
       <height>171</height>
      </rect>
     </property>
@@ -197,6 +197,9 @@
        <property name="text">
         <string>TextLabel</string>
        </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
@@ -216,6 +219,9 @@
       <widget class="QLabel" name="label_databases">
        <property name="text">
         <string>TextLabel</string>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
