--- a/Wizards/Settings/dbwizardpage.ui
+++ b/Wizards/Settings/dbwizardpage.ui
@@ -18,13 +18,13 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>361</width>
+     <width>377</width>
      <height>281</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QGroupBox" name="groupBox_playlists">
+     <widget class="QGroupBox" name="groupBox_database">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
         <horstretch>0</horstretch>
@@ -37,8 +37,14 @@
         <height>50</height>
        </size>
       </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
       <property name="title">
-       <string>Playlists</string>
+       <string>Choose where to create Database</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
       <property name="checkable">
        <bool>true</bool>
@@ -53,8 +59,11 @@
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
+        <property name="leftMargin">
+         <number>18</number>
+        </property>
         <item>
-         <widget class="QLineEdit" name="lineEdit_playlists">
+         <widget class="QLineEdit" name="lineEdit_database">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>0</horstretch>
@@ -82,7 +91,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_playlistsBrowse">
+           <widget class="QPushButton" name="pushButton_databaseBrowse">
             <property name="text">
              <string>Browse</string>
             </property>
@@ -114,74 +123,13 @@
      </spacer>
     </item>
     <item>
-     <widget class="QGroupBox" name="groupBox_fragments">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+     <widget class="QLabel" name="label_database">
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;DziobakPlayer will create a SQLite3 database in given directory.&lt;/p&gt;&lt;p&gt;It can be deleted in application &lt;span style=&quot; font-weight:600;&quot;&gt;settings.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
-      <property name="minimumSize">
-       <size>
-        <width>359</width>
-        <height>20</height>
-       </size>
+      <property name="margin">
+       <number>4</number>
       </property>
-      <property name="title">
-       <string>Fragments</string>
-      </property>
-      <property name="checkable">
-       <bool>true</bool>
-      </property>
-      <widget class="QWidget" name="verticalLayoutWidget_11">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>30</y>
-         <width>341</width>
-         <height>81</height>
-        </rect>
-       </property>
-       <layout class="QVBoxLayout" name="verticalLayout_11">
-        <item>
-         <widget class="QLineEdit" name="lineEdit_fragments">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_9">
-          <item>
-           <spacer name="horizontalSpacer_9">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushButton_fragmentsBrowse">
-            <property name="text">
-             <string>Browse</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </widget>
      </widget>
     </item>
    </layout>
