--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,17 +14,24 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QListView" name="listView_fragments">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>140</y>
-      <width>80</width>
-      <height>25</height>
+      <x>330</x>
+      <y>130</y>
+      <width>256</width>
+      <height>192</height>
      </rect>
     </property>
-    <property name="text">
-     <string>PushButton</string>
+   </widget>
+   <widget class="QListView" name="listView_playlists">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>130</y>
+      <width>256</width>
+      <height>192</height>
+     </rect>
     </property>
    </widget>
   </widget>
