-Drag and drop from fragments list to fragments list - copy -Moving functions of finding new id and new title -Added some Q_UNUSED

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -59,14 +59,25 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <item>
-             <widget class="QListView" name="fragments_listView"/>
+             <widget class="QListView" name="fragments_listView">
+              <property name="dragEnabled">
+               <bool>true</bool>
+              </property>
+              <property name="dragDropMode">
+               <enum>QAbstractItemView::DragDrop</enum>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_2">
             <item>
-             <widget class="QListView" name="playlists_listView"/>
+             <widget class="QListView" name="playlists_listView">
+              <property name="dragDropMode">
+               <enum>QAbstractItemView::DragDrop</enum>
+              </property>
+             </widget>
             </item>
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout_3">
