--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -60,6 +60,9 @@
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <item>
              <widget class="QListView" name="fragments_listView">
+              <property name="acceptDrops">
+               <bool>true</bool>
+              </property>
               <property name="dragEnabled">
                <bool>true</bool>
               </property>
@@ -74,6 +77,15 @@
            <layout class="QVBoxLayout" name="verticalLayout_2">
             <item>
              <widget class="QListView" name="playlists_listView">
+              <property name="acceptDrops">
+               <bool>true</bool>
+              </property>
+              <property name="dragEnabled">
+               <bool>true</bool>
+              </property>
+              <property name="dragDropOverwriteMode">
+               <bool>false</bool>
+              </property>
               <property name="dragDropMode">
                <enum>QAbstractItemView::DragDrop</enum>
               </property>
