- Drag and drop from one playlist to another

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -69,6 +69,12 @@
               <property name="dragDropMode">
                <enum>QAbstractItemView::DragDrop</enum>
               </property>
+              <property name="selectionMode">
+               <enum>QAbstractItemView::ExtendedSelection</enum>
+              </property>
+              <property name="selectionRectVisible">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
            </layout>
