--- a/DPlayerApp/mainwindow.ui
+++ b/DPlayerApp/mainwindow.ui
@@ -63,6 +63,9 @@
               <property name="acceptDrops">
                <bool>true</bool>
               </property>
+              <property name="editTriggers">
+               <set>QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
+              </property>
               <property name="dragEnabled">
                <bool>true</bool>
               </property>
@@ -81,6 +84,9 @@
              <widget class="QListView" name="playlists_listView">
               <property name="acceptDrops">
                <bool>true</bool>
+              </property>
+              <property name="editTriggers">
+               <set>QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
               </property>
               <property name="dragEnabled">
                <bool>true</bool>
@@ -139,7 +145,7 @@
      <x>0</x>
      <y>0</y>
      <width>1107</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
